--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "vanilla-js",
+  "name": "vanilla",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "npx parcel src/register.html --no-cache",
@@ -12,5 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.12.0"
-  }
+  },
+  "description": ""
 }
