--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npx parcel src/register.html --no-cache",
+    "start": "npx parcel src/register.html --open",
     "server": "json-server --port 3001 --watch servidores/db.json"
   },
   "keywords": [],
